--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -156,7 +156,7 @@ Die Salze werden aus den Daten des Kontos gewonnen</string>
     <string name="slide_2_title">Generieren</string>
     <string name="slide_2_desc_one">Wählen Sie ein Konto aus der Liste aus.</string>
     <string name="slide_2_desc_two">Denken Sie sich ein Master-Passwort aus, dass Sie geheim halten. Basierend auf diesem Master-Passwort werden die anderen Passworte generiert.</string>
-    <string name="slide_2_desc_three">Geben Sie das Passwort auf der Webseite ein.</string>
+    <string name="slide_2_desc_three">Geben Sie das generierte Passwort auf der Webseite ein.</string>
 
     <string name="slide_3_title">Konten</string>
     <string name="slide_3_desc_one">Webseitenbetreiber verwenden häufig Passwordrichtlinien.</string>
