--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -109,7 +109,7 @@
 
     <string name="help_generation_heading">Wie werden die Passworte generiert?</string>
     <string name="help_generation_description">Die Passworte werden durch eine Kombination der Hashalgorithmen BCrypt und PBKDF2 generiert. Dabei ist das Master-Passwort der Startwert für beide Algorithmen.
-Die Salt-Werte werden aus den Kontodaten und einem Installations-Salt (falls aktiviert) abgeleitet.</string>
+Die Salt-Werte werden aus den Kontodaten abgeleitet. Falls in den Einstellungen aktiviert, wird auch ein Installations-Salt (das beim ersten Start erzeugt wird) zum Salt hinzugefügt.</string>
 
     <string name="help_password_storage_heading">Werden die Passworte auf dem Gerät gespeichert?</string>
     <string name="help_password_storage_description">Nein. Weder die generierten Passworte, noch das Master-Passwort werden auf dem Gerät gespeichert. Nur die Kontodaten und der Installations-Salt werden auf Ihrem Gerät gespeichert.</string>
@@ -127,7 +127,7 @@ Die Salt-Werte werden aus den Kontodaten und einem Installations-Salt (falls akt
 
     <string name="title_activity_settings">Einstellungen</string>
     <string name="title_bind_password">Alle Passwörter an diese Installation binden</string>
-    <string name="summary_bind_password">Erzeugt eindeutige Passwörter abhängig von einem Installations-Salt (der beim ersten Start erzeugt wird). Bei Verwendung eines anderen Geräts oder einer Neuinstallation der App können nicht diesselben Passworte bei der Eingabe von denselben Daten und demselben Master-Passwort erzeugt werden. Wir empfehlen daher dringend, die Daten dieser App mit der Privacy Friendly Backup App zu sichern, wenn Sie diese Option verwenden. Andernfalls ist es unmöglich, die Passwörter wiederherzustellen, falls Sie Ihr Gerät verlieren.</string>
+    <string name="summary_bind_password">Erzeugt eindeutige Passwörter auf diesem Gerät. Bei Verwendung eines anderen Geräts oder einer Neuinstallation der App können nicht diesselben Passworte bei der Eingabe von denselben Daten und demselben Master-Passwort erzeugt werden. Wir empfehlen daher dringend, die Daten dieser App mit der Privacy Friendly Backup App zu sichern, wenn Sie diese Option verwenden. Andernfalls ist es unmöglich, die Passwörter wiederherzustellen, falls Sie Ihr Gerät verlieren.</string>
     <string name="title_clipboard">In Zwischenablage kopieren</string>
     <string name="summary_clipboard">Alle anderen Apps können Ihre Passworte in der Zwischenablage einsehen.</string>
 
